--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Android/AndroidManifest.xml
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Android/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="___SafeGameName___.Android" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.___SafeGameName___" android:versionCode="1" android:versionName="1.0">
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
-	<application android:label="___SafeGameName___"></application>
+	<uses-sdk android:minSdkVersion="29" android:targetSdkVersion="34" />
+	<application android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@style/MainTheme" />
 </manifest>
