--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
@@ -5,6 +5,14 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <CreatePackage>false</CreatePackage>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <CreatePackage>true</CreatePackage>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
+  </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>../___SafeGameName___.Core/Content/Icon.ico</ApplicationIcon>
