--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <CreatePackage>false</CreatePackage>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <CreatePackage>false</CreatePackage>
+    <CreatePackage>true</CreatePackage>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <MonoGameContentReference Include="..\___SafeGameName___.Core\Content\___SafeGameName___.mgcb">
