--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
@@ -6,6 +6,9 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>../___SafeGameName___.Core/Content/Icon.ico</ApplicationIcon>
+    <AssemblyName>___SafeGameName___</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <CreatePackage>false</CreatePackage>
@@ -14,11 +17,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CreatePackage>true</CreatePackage>
     <DefineConstants>$(DefineConstants);DIRECTX</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-    <ApplicationIcon>../___SafeGameName___.Core/Content/Icon.ico</ApplicationIcon>
-    <AssemblyName>___SafeGameName___</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <MonoGameContentReference Include="..\___SafeGameName___.Core\Content\___SafeGameName___.mgcb">
@@ -30,7 +28,9 @@
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj" />
+    <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj">
+      <ReferenceSourceTarget></ReferenceSourceTarget>
+    </ProjectReference>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
