--- a/CSharp/content/MonoGame.Application.iOS.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.Application.iOS.CSharp/MGNamespace.csproj
@@ -6,8 +6,8 @@
     <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="1.0.0" />
-    <PackageReference Include="MonoGame.Framework.iOS" Version="1.0.0" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+    <PackageReference Include="MonoGame.Framework.iOS" Version="3.8.*" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
