--- a/CSharp/content/MonoGame.Library.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.Library.CSharp/MGNamespace.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="1.0.0">
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
