--- a/CSharp/content/MonoGame.Library.Pipeline.Extension.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.Library.Pipeline.Extension.CSharp/MGNamespace.csproj
@@ -3,10 +3,10 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="1.0.0">
+    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="1.0.0">
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
