--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Build and Pack the Templates into a NUGET
       id: MG-Templates
-      run: dotnet pack main/CSharp/MonoGame.Templates.CSharp.csproj -p:Configuration=Release
+      run: dotnet pack main/CSharp/MonoGame.Templates.CSharp.csproj -p:Configuration=Release /p:Version=${{ ENV.TEMPLATE_VERSION }}
 
     - name: Upload Template Nugets
       uses: actions/upload-artifact@v4
