--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Android/AndroidManifest.xml
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Android/AndroidManifest.xml
@@ -2,5 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.___SafeGameName___" android:versionCode="1" android:versionName="1.0">
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
 	<uses-sdk android:minSdkVersion="29" android:targetSdkVersion="34" />
-	<application android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@style/MainTheme" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<application
+		android:hardwareAccelerated="true"
+		android:icon="@drawable/icon"
+		android:isGame="true"
+		android:label="@string/app_name"
+		android:theme="@style/MainTheme"
+		/>
 </manifest>
