Re-add DEBUG symbol back in. why did I remove it? :facepalm:

--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <CreatePackage>false</CreatePackage>
-    <DefineConstants>$(DefineConstants);DIRECTX</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG;DIRECTX</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <CreatePackage>true</CreatePackage>
