--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/___SafeGameName___.Core.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.Core/___SafeGameName___.Core.csproj
@@ -4,7 +4,7 @@
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-      <DefineConstants>$(DefineConstants);</DefineConstants>
+      <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
       <DefineConstants>$(DefineConstants);</DefineConstants>
