--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <CreatePackage>false</CreatePackage>
-    <DefineConstants>$(DefineConstants);</DefineConstants>
+    <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <CreatePackage>true</CreatePackage>
