--- a/CSharp/content/MonoGame.Application.WindowsDX.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.Application.WindowsDX.CSharp/MGNamespace.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
   </ItemGroup>
-  <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
+  <Target Name="RestoreDotnetTools" BeforeTargets="CollectPackageReferences">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
   </Target>
