--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CSharp/___SafeGameName___.WindowsDX/___SafeGameName___.WindowsDX.csproj
@@ -24,7 +24,7 @@
       <ReferenceSourceTarget></ReferenceSourceTarget>
     </ProjectReference>
   </ItemGroup>
-  <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
+  <Target Name="RestoreDotnetTools" BeforeTargets="CollectPackageReferences">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
   </Target>
