Fix launch.json paths.

--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/.vscode/launch.json
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.DesktopGL/.vscode/launch.json
@@ -8,7 +8,7 @@
         "name": "C#: ___SafeGameName___ Debug",
         "type": "dotnet",
         "request": "launch",
-        "projectPath": "${workspaceFolder}/___SafeGameName___.csproj"
+        "projectPath": "${workspaceFolder}/___SafeGameName___.DesktopGL.csproj"
       }
     ],
   }
