--- a/CSharp/content/MonoGame.ContentBuilder.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.ContentBuilder.CSharp/MGNamespace.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.*">
+    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.*" />
     <PackageReference Include="MonoGame.Framework.Native" Version="3.8.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
