Patch versions and restore missing iOS property in csproj

--- a/CSharp/content/MonoGame.Application.iOS.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.Application.iOS.CSharp/MGNamespace.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0-ios</TargetFramework>
     <OutputType>Exe</OutputType>
+    <SupportedOSPlatformVersion>12.2</SupportedOSPlatformVersion>
     <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <ItemGroup>
