--- a/CSharp/content/MonoGame.ContentBuilder.CSharp/MGNamespace.csproj
+++ b/CSharp/content/MonoGame.ContentBuilder.CSharp/MGNamespace.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.*">
+    <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.*" />
     <PackageReference Include="MonoGame.Framework.Native" Version="3.8.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
