--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.Core/___SafeGameName___.Core.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.Core/___SafeGameName___.Core.csproj
@@ -4,7 +4,7 @@
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Native" Version="3.8.*">
+    <PackageReference Include="MonoGame.Framework.Native" Version="3.8.5-develop.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
