Fix scaling resolution on WindowsDX and DesktopGL.

--- a/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0-ios</TargetFramework>
     <SupportedOSPlatformVersion>12.2</SupportedOSPlatformVersion>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <AssemblyName>___SafeGameName___</AssemblyName>
+    <AssemblyTitle>___SafeGameName___</AssemblyTitle>
   </PropertyGroup>
   <ItemGroup>
     <MonoGameContentReference Include="..\___SafeGameName___.Core\Content\___SafeGameName___.mgcb">
