--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.Android/___SafeGameName___.Android.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.Android/___SafeGameName___.Android.csproj
@@ -15,7 +15,7 @@
     <AndroidAsset Include="$(OutputPath)Content\**\*">
       <Link>Content\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </AndroidAsset>
-  </ItemGroup>  
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.Android" Version="3.8.5-develop.*" />
   </ItemGroup>
@@ -25,7 +25,8 @@
       <ContentTemp>$(ProjectDir)$(IntermediateOutputPath)</ContentTemp>
       <ContentArgs>build -p $(MonoGamePlatform) -s Assets -o $(ContentOutput) -i $(ContentTemp)</ContentArgs>
     </PropertyGroup>
-    <MSbuild Projects="..\___SafeGameName___.Content\___SafeGameName___.Content.csproj" Targets="Build;Run"
+    <MSbuild Projects="..\___SafeGameName___.Content\___SafeGameName___.Content.csproj"
+      Targets="Build;Run"
       Properties="RunArguments=$(ContentArgs);" />
-  </Target>    
+  </Target>
 </Project>
