--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.iOS/___SafeGameName___.iOS.csproj
@@ -9,6 +9,11 @@
     <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="$(OutputPath)Content\**\*">
+      <Link>Content\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </BundleResource>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="MonoGame.Framework.iOS" Version="3.8.5-develop.*" />
   </ItemGroup>
   <Target Name="BuildContent" BeforeTargets="Build">
@@ -17,7 +22,8 @@
       <ContentTemp>$(ProjectDir)$(IntermediateOutputPath)</ContentTemp>
       <ContentArgs>build -p $(MonoGamePlatform) -s Assets -o $(ContentOutput) -i $(ContentTemp)</ContentArgs>
     </PropertyGroup>
-    <MSbuild Projects="..\___SafeGameName___.Content\___SafeGameName___.Content.csproj" Targets="Build;Run"
+    <MSbuild Projects="..\___SafeGameName___.Content\___SafeGameName___.Content.csproj"
+      Targets="Build;Run"
       Properties="RunArguments=$(ContentArgs);" />
-  </Target>    
+  </Target>
 </Project>
