--- a/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.WindowsGDK/___SafeGameName___.WindowsGDK.csproj
+++ b/CSharp/content/MonoGame.Blank.2D.StartKit.CB.CSharp/___SafeGameName___.WindowsGDK/___SafeGameName___.WindowsGDK.csproj
@@ -7,12 +7,15 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>../___SafeGameName___.Core/Assets/Icon.ico</ApplicationIcon>
     <AssemblyName>___SafeGameName___</AssemblyName>
+    <MonoGamePlatform>WindowsGDK</MonoGamePlatform>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.5-preview.*" />
+    <PackageReference Include="MonoGame.Framework.Native" Version="3.8.5-preview.*" />
+    <PackageReference Include="MonoGame.Runtime.Windows.DX12" Version="3.8.5-preview.*" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.5-preview.*" />
   </ItemGroup>
   <Import Project="..\___SafeGameName___.Content\BuildContent.targets" />
 </Project>
