--- a/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.Android/___SafeGameName___.Android.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.Android/___SafeGameName___.Android.csproj
@@ -19,14 +19,5 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.Android" Version="3.8.5-preview.*" />
   </ItemGroup>
-  <Target Name="BuildContent" BeforeTargets="BeforeCompile">
-    <PropertyGroup>
-      <ContentOutput>$(ProjectDir)$(OutputPath)</ContentOutput>
-      <ContentTemp>$(ProjectDir)$(IntermediateOutputPath)</ContentTemp>
-      <ContentArgs>build -p $(MonoGamePlatform) -s Assets -o $(ContentOutput) -i $(ContentTemp)</ContentArgs>
-    </PropertyGroup>
-    <MSbuild Projects="..\___SafeGameName___.Content\___SafeGameName___.Content.csproj"
-      Targets="Build;Run"
-      Properties="RunArguments=$(ContentArgs);" />
-  </Target>
+  <Import Project="..\___SafeGameName___.Content\BuildContent.targets" />
 </Project>
