--- a/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.DesktopGL/___SafeGameName___.DesktopGL.csproj
@@ -7,6 +7,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>../___SafeGameName___.Core/Assets/Icon.ico</ApplicationIcon>
     <AssemblyName>___SafeGameName___</AssemblyName>
+    <MonoGamePlatform>DesktopGL</MonoGamePlatform>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj" />
