--- a/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.WindowsDX12/___SafeGameName___.WindowsDX12.csproj
+++ b/CSharp/content/MonoGame.2D.StartKit.CB.CSharp/___SafeGameName___.WindowsDX12/___SafeGameName___.WindowsDX12.csproj
@@ -7,7 +7,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>../___SafeGameName___.Core/Assets/Icon.ico</ApplicationIcon>
     <AssemblyName>___SafeGameName___</AssemblyName>
-    <MonoGamePlatform>WindowsGDK</MonoGamePlatform>
+    <MonoGamePlatform>WindowsDX12</MonoGamePlatform>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\___SafeGameName___.Core\___SafeGameName___.Core.csproj" />
